--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
-<html>
+<html lang="es">
 <head>
-  
-    <base href="/" />
-    <title>Minka Platform</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <meta charset="utf-8">
+  <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+ 
 
+    <title>Minka Platform</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
 
 </head>
 <body>
