Before Big Cleaning

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     
     <meta charset="utf-8">
-  <meta
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
  
 
     <title>Minka Platform</title>
+    <base href="/">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     
 
