--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
  
 
     <title>Minka Platform</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <app-root></app-root>
